src/renderer/src/app/grid/Grid.css
.grid {
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
    height: fit-content;
    padding: 30px;
    padding-top: 0;
    flex-grow: 1;

    & > .organ {
        display: flex;
        flex-direction: column;
        border: solid 1px var(--color-surface-dark);
        border-radius: 15px;
        overflow: hidden;
        cursor: pointer;
        position: relative;
        background-color: var(--color-surface);
        min-width: 300px;
        max-width: 400px;
        flex-grow: 1;

        & > .cover {
            width: 100%;
            height: 200px;
            flex-shrink: 0;
            overflow: hidden;

            & > .error,
            & > .image {
                width: 100%;
                height: 100%;
            }

            & > .error {
                display: flex;
                align-items: center;
                justify-content: center;
                color: var(--color-on-surface-low-emphasis);
                background-color: var(--color-surface);
                padding: 20px;
                text-align: center;
            }

            & > .image {
                background-size: cover;
                background-repeat: no-repeat;
                background-position: center;
                transition: scale 0.3s;
            }
        }

        &:hover > .cover > .image {
            scale: 1.1;
        }

        & > .content {
            padding: 20px;
            display: flex;
            flex-direction: column;
            gap: 10px;
            z-index: 1;

            & > .name {
                margin-block: 0;
            }

            & > .infos {
                color: var(--color-on-surface-low-emphasis);
            }
        }
    }
}

